# On-Android-How-to-Use-Objective-C-with-GNUstep

./: README.md
ObjCTest/: local.properties  settings.gradle
ObjCTest/app/: build.gradle
ObjCTest/app/src/androidTest/java/com/codelearning/objctest/: ExampleInstrumentedTest.java
ObjCTest/app/src/main/: AndroidManifest.xml
ObjCTest/app/src/main/cpp/: CMakeLists.txt  native-lib.c  objc_test.m
ObjCTest/app/src/main/cpp/zf_sys/: zf_sys.h
ObjCTest/app/src/main/java/com/codelearning/objctest/: MainActivity.java
ObjCTest/app/src/main/res/values/: strings.xml
ObjCTest/app/src/test/java/com/codelearning/objctest/: ExampleUnitTest.java
ObjCTest/gradle/wrapper/: gradle-wrapper.properties
